fid delete routes
